objects/Flosum__Organisation__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__CreateSnapshot__c</fullName>
        <formula>HYPERLINK(&apos;/apex/CreateMultiMetaSnapshot?oid=&apos;+ Id , &apos;Click to create new Snapshot&apos;,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Snapshot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Lifecycle_Stage__c</fullName>
        <label>Lifecycle Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flosum__Organisation_ID__c</fullName>
        <label>Organization ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Organisation_Type__c</fullName>
        <label>Organization Type</label>
        <picklist>
            <picklistValues>
                <fullName>Developer/Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flosum__Owner_Name__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ OwnerId , Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__User_Full_Name__c</fullName>
        <description>Full Name of User who authorize the environment</description>
        <label>User Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Username__c</fullName>
        <label>Username</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>Org</label>
    <listViews>
        <fullName>Flosum__All</fullName>
        <columns>NAME</columns>
        <columns>Flosum__Username__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orgs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>